# gdx-basis-universal

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CHANGES.md  README.md  ant-build-linux64.sh  assemble-natives-android.bat  assemble-natives-android.sh  assemble-natives-ios.sh  assemble-natives-macos.sh  assemble-natives-web.bat  assemble-natives-web.sh  assemble-natives-windows.sh  build-linux64-ref.xml  build.gradle  compile-web-natives-win.bat  gradle.properties  natives-dev-build-linux64.sh  natives-dev-build-mac64.sh  natives-dev-build-win64.bat  natives-web-build-linux.sh  natives-web-build-win.bat  settings.gradle
basisu/: build.gradle
basisu-gdx/: build.gradle  gradle.properties
basisu-gdx-gwt/: build.gradle  gradle.properties
basisu-gdx-gwt/src/: BasisuGdxGwtExt.gwt.xml
basisu-gdx-gwt/src/com/crashinvaders/basisu/: BasisuGdxGwt.gwt.xml
basisu-gdx-gwt/src/com/crashinvaders/basisu/gdx/: BasisuGdxGwt.gwt.xml
basisu-gdx-gwt/src/com/crashinvaders/basisu/gdx/emu/: package-info.java
basisu-gdx-gwt/src/com/crashinvaders/basisu/gdx/gwt/: package-info.java
basisu-gdx-gwt/src/java/nio/: BasisuGwtBufferUtil.java
basisu-gdx/src/com/crashinvaders/basisu/: BasisuGdx.gwt.xml
basisu-gdx/src/com/crashinvaders/basisu/gdx/: BasisuBufferUtils.java  BasisuData.java  BasisuGdxException.java  BasisuGdxGl.java  BasisuGdxUtils.java  BasisuNativeLibLoader.java  BasisuTextureData.java  BasisuTextureFormatSelector.java  BasisuTextureLoader.java  Ktx2Data.java  Ktx2TextureData.java  Ktx2TextureFormatSelector.java  Ktx2TextureLoader.java
basisu-gdx/src/com/crashinvaders/basisu/wrapper/gdx/: BasisuData.java
basisu-gdx/test/com/crashinvaders/basisu/gdx/: BasisuGdxUtilsTest.java
basisu-wrapper/: README.md  build.gradle  compile-web-natives-manual-win.bat  gradle.properties
basisu-wrapper/jni/: BasisuWrapperNatives.gwt.xml  CMakeLists.txt  basisu_native_utils.cpp  basisu_wrapper.cpp  basisu_wrapper.h  basisu_wrapper_emscripten.cpp  build-web.xml  web-lib-setup.js
basisu-wrapper/jni-test/: CMakeLists.txt  file_utils.h  main.cpp  run.sh
basisu-wrapper/jni/include/: basisu_utils.h  basisu_wrapper.h  jni_utils.h
basisu-wrapper/jni/src/: basisu_native_utils.cpp  basisu_transcoder.cpp  basisu_utils.cpp  basisu_wrapper.cpp  basisu_wrapper.h  jni_utils.cpp
basisu-wrapper/jni/test/: CMakeLists.txt  main.cpp
basisu-wrapper/libs/ios32/: libgdx-basis-universal.a.386  libgdx-basis-universal.a.arm64  libgdx-basis-universal.a.armv7  libgdx-basis-universal.a.tvos  libgdx-basis-universal.a.tvos.arm64  libgdx-basis-universal.a.tvos.x86_64  libgdx-basis-universal.a.x86_64
basisu-wrapper/libs/ios32/gdx-basis-universal.xcframework/: Info.plist
basisu-wrapper/libs/ios32/gdx-basis-universal.xcframework/ios-arm64/gdx-basis-universal.framework/: Info.plist  gdx-basis-universal
basisu-wrapper/libs/ios32/gdx-basis-universal.xcframework/ios-arm64_x86_64-simulator/gdx-basis-universal.framework/: Info.plist  gdx-basis-universal
basisu-wrapper/libs/macosx64/: libgdx-basis-universal64.dylib
basisu-wrapper/libs/macosxarm64/: libgdx-basis-universalarm64.dylib
basisu-wrapper/libs/web/: BasisuGdxGwtNatives.gwt.xml  gdx-basis-universal.js  gdx-basis-universal.wasm
basisu-wrapper/resources/: cosmocat_promo.basis
basisu-wrapper/src/com/crashinvaders/basisu/: BasisuWrapper.gwt.xml
basisu-wrapper/src/com/crashinvaders/basisu/wrapper/: BasisImageInfo.java  BasisuFileInfo.java  BasisuFileInfoOld.java  BasisuImageInfo.java  BasisuImageInfoOld.java  BasisuImageLevelInfo.java  BasisuPlatform.java  BasisuTextureFormat.java  BasisuTextureType.java  BasisuTranscoderTextureFormat.java  BasisuTranscoderTextureFormatSupportIndex.java  BasisuWrapper.java  BasisuWrapperException.java  Ktx2FileInfo.java  Ktx2ImageLevelInfo.java  MainTest.java  UniqueIdUtils.java  UniqueIdValue.java
basisu-wrapper/test-resources/: test0.basis
basisu-wrapper/test/com.crashinvaders.basisu.wrapper/: TestBasisuWrapper.java
basisu-wrapper/test/com/crashinvaders/basisu/wrapper/: BasisuWrapperTest.java  TestBasisuWrapper.java  TestUtils.java
basisu-wrapper/test/resources/: cosmocat_promo.basis
basisu/jni/src/: basisu_wrapper.cpp  jni_utils.cpp
basisu/jni/test/: main.cpp
basisu/src/com/crashinvaders/basisu/: BasisImageInfo.java  BasisuException.java  BasisuFileInfo.java  BasisuImageInfo.java  BasisuTextureFormat.java  BasisuTextureType.java  BasisuTranscoderTextureFormat.java  BasisuWrapper.java  MainTest.java  UniqueIdValue.java
demo/: README.md  build.gradle  gradle.properties
demo/android/: AndroidManifest.xml  build.gradle
demo/android/res/values/: strings.xml  styles.xml
demo/assets/: bananacat.mipmap.etc1s.basis  basisu-atlas.atlas  basisu-atlas.basis  level_temple0.basis  screen-stuff-etc1s.basis  screen-stuff-uastc.basis  screen_stuff.uastc.ktx2  subarking512.etc1s.mipmap.basis  subarking512.uastc.mipmap.ktx2
demo/core/: build.gradle
demo/core/src/com.crashinvaders.basisu/: DemoCore.gwt.xml
demo/core/src/com.crashinvaders.basisu.demo/: App.java  PlatformLauncher.java
demo/core/src/com/crashinvaders/basisu/: DemoCore.gwt.xml
demo/desktop/: build.gradle
demo/ios/: Info.plist.xml  build.gradle  robovm.properties
demo/web/: build.gradle
demo/web/webapp/: index.html
native-lib/: build.gradle
native-lib/jni/basisu/: basisu_transcoder.cpp
native-lib/jni/src/: basisu_transcoder.h  basisu_utils.cpp  basisu_utils.h  jni_utils.cpp  jni_utils.h  test.cpp  test.h
native-lib/jni/test/: CMakeLists.txt  main.cpp  run.sh
native-lib/src/: JniGenCompiler.java  PatchedBuildExecutor.java  PatchedNativeCodeGenerator.java
native-lib/src/com/metaphore/jnigentest/: JniGenException.java  Main.java
(+29 files in other folders)
